2012-01-05  Otavio Pontes <obusatto@linux.vnet.ibm.com>
	* src/org/eclipse/linuxtools/oprofile/core/Oprofile.java,
	  src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java:
	  Adapting to new way of using LinuxtoolsPathProperty class

2011-12-21  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/opxml/EventIdCache.java
		(getUnitMaskType): If the Schema Version of the ophelp XML is
		greater than 1.0, then the unit mask type will exist as an
		attribute so we can extract it directly.

2011-12-16  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/Oprofile.java
		(static initializer): In some cases we may have no project to set
		but we may still need to have the oprofile module loaded. In these
		cases allow loading, if possible.

2011-12-04  Rafael Teixeira <rafaelmt@linux.vnet.ibm.com>

	* META-INF/MANIFEST.MF:  Add org.eclipse.linuxtools.tools.launch.core
		to required bundles.
	* op_error_key: Add error key opcontrolSudo
	* src/org/eclipse/linuxtools/oprofile/core/Oprofile.java: Add currentPath
		to allow profiling using the Linux Tools path that's set for the
		current project.
	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java:
		Use RuntimeProcessFactory to get Linux Tools path if it's set for
		the current project.
	* src/org/eclipse/linuxtools/oprofile/core/linux/OpxmlRunner.java:
		Use RuntimeProcessFactory to get Linux Tools path if it's set for
		the current project.
	* src/org/eclipse/linuxtools/oprofile/core/oprofile.properties:
		Add error message for executing Oprofile with a different Linux
		Tools path without putting opcontrol in the sudoers file.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/EventIdCache.java:
		Use RuntimeProcessFactory to get Linux Tools path if it's set for
		the current project.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/info/InfoAdapter.java: