@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE policyconfig PUBLIC
+ "-//freedesktop//DTD PolicyKit Policy Configuration 1.0//EN"
+ "http://www.freedesktop.org/standards/PolicyKit/1/policyconfig.dtd">
+<policyconfig>
+
+  <vendor>Eclipse Linux Tools</vendor>
+  <vendor_url>http://www.eclipse.org/linuxtools</vendor_url>
+
+    <action id="org.eclipse.linuxtools.oprofile.run-opcontrol">
+      <description>Run the OProfile opcontrol binary</description>
+      <message>Authentication is required to run the OProfile opcontrol binary</message>
+      <icon_name>computer</icon_name>
+      <defaults>
+	<allow_any>no</allow_any>
+        <allow_inactive>no</allow_inactive>
+        <allow_active>auth_admin_keep</allow_active>
+      </defaults>
+      <annotate key="org.freedesktop.policykit.exec.path">/usr/bin/opcontrol</annotate>
+    </action>
+
+</policyconfig>
+
