@@ -15,6 +15,8 @@ if [ $(basename $(pwd)) != scripts ]; then
   exit 1
 fi
 
-rm -f /usr/share/polkit-1/actions/org.eclipse.linuxtools.oprofile.policy
+rm -f /etc/security/console.apps/opcontrol
+rm -f /etc/pam.d/opcontrol
+rm -f ./opcontrol
 
 echo Eclipse-OProfile plugin uninstall successful.
